SERVER-18054 Fix crash when running findAndModify against non-existent collection.